--- a/galaxy/welcome.html
+++ b/galaxy/welcome.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/static/style/base.css" type="text/css" />
+    <link rel="stylesheet" href="/static/dist/base.css" type="text/css" />
 </head>
 <body style="margin: 0">
 
@@ -13,8 +13,8 @@
             To customize this page you can create a <code>welcome.html</code> page in your directory mounted to <code>/export</code>.
 
             <br>
-            <a target="_blank" href="https://wiki.galaxyproject.org/Admin/Config" class="btn btn-primary btn-lg">Configuring Galaxy »</a>
-            <a target="_blank" href="https://wiki.galaxyproject.org/Admin/Tools/AddToolFromToolShedTutorial" class="btn btn-primary btn-lg">Installing Tools »</a>
+            <a target="_blank" href="https://docs.galaxyproject.org/en/latest/admin/config.html" class="btn btn-primary btn-lg">Configuring Galaxy »</a>
+            <a target="_blank" href="https://galaxyproject.org/admin/tools/add-tool-from-toolshed-tutorial/" class="btn btn-primary btn-lg">Installing Tools »</a>
             <a target="_parent" href="/tours/core.galaxy_ui" class="btn btn-primary btn-lg">Guided Tour »</a>
             </td><td>
                 <div align=center>
@@ -29,9 +29,9 @@
 
         <p class="lead">
             <a target="_blank" class="reference" href="http://galaxyproject.org/">
-            Galaxy</a> is an open platform for supporting data intensive
-            research. Galaxy is developed by <a target="_blank" class="reference" href="http://wiki.galaxyproject.org/GalaxyTeam">The Galaxy Team</a>
-            with the support of  <a target="_blank" class="reference" href="https://github.com/galaxyproject/galaxy/blob/dev/CONTRIBUTORS.md">many contributors</a>.
+                Galaxy</a> is an open platform for supporting data intensive
+                research. Galaxy is developed by <a target="_blank" class="reference" href="https://galaxyproject.org/galaxy-team/">The Galaxy Team</a>
+                with the support of  <a target="_blank" class="reference" href="https://github.com/galaxyproject/galaxy/blob/dev/CONTRIBUTORS.md">many contributors</a>.
             The Galaxy Docker project is supported by the University of Freiburg, part of de.NBI.
         </p>
 
